--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,29 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Home work</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <div class="section">
+      <form class="search-form" id="search-form">
+        <input
+          class="search-input"
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
 
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
+        <button class="form-btn" type="submit">Search images</button>
+      </form>
+    </div>
 
-    <load src="./partials/footer.html" />
-
+    <div class="gallery"></div>
+    <button type="button" class="load-more-btn is-hidden">
+      Loading images, please wait......
+    </button>
+    <span class="loader is-hidden"></span>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
