--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="section">
-      <form class="search-form" id="search-form">
+      <form class="form" id="search-form">
         <input
           class="search-input"
           type="text"
@@ -17,16 +17,17 @@
           autocomplete="off"
           placeholder="Search images..."
         />
-
         <button class="form-btn" type="submit">Search images</button>
       </form>
     </div>
 
-    <div class="gallery"></div>
+    <ul class="gallery"></ul>
+
     <button type="button" class="load-more-btn is-hidden">
       Loading images, please wait......
     </button>
     <span class="loader is-hidden"></span>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
