--- a/src/index.html
+++ b/src/index.html
@@ -4,29 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home work</title>
+    <title>Homework 11</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="node_modules/izitoast/dist/css/iziToast.min.css" />
+    <link rel="stylesheet" href="node_modules/simplelightbox/dist/simple-lightbox.min.css" />
   </head>
   <body>
-    <div class="section">
-      <form class="form" id="search-form">
+    <section class="search-section">
+      <form id="search-form" class="form">
         <input
-          class="search-input"
           type="text"
           name="searchQuery"
           autocomplete="off"
           placeholder="Search images..."
+          required
         />
-        <button class="form-btn" type="submit">Search images</button>
+        <button type="submit">Search</button>
       </form>
-    </div>
+    </section>
 
     <ul class="gallery"></ul>
 
-    <button type="button" class="load-more-btn is-hidden">
-      Loading images, please wait......
-    </button>
-    <span class="loader is-hidden"></span>
+    <div class="loader is-hidden">Loading...</div>
 
     <script type="module" src="./main.js"></script>
   </body>
