--- a/src/index.html
+++ b/src/index.html
@@ -6,26 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 11</title>
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="node_modules/izitoast/dist/css/iziToast.min.css" />
-    <link rel="stylesheet" href="node_modules/simplelightbox/dist/simple-lightbox.min.css" />
   </head>
   <body>
-    <section class="search-section">
-      <form id="search-form" class="form">
+    <div class="section">
+      <form class="search-form" id="search-form">
         <input
+          class="search-input"
           type="text"
           name="searchQuery"
           autocomplete="off"
           placeholder="Search images..."
-          required
         />
-        <button type="submit">Search</button>
+        <button class="form-btn" type="submit">Search images</button>
       </form>
-    </section>
+    </div>
 
     <ul class="gallery"></ul>
 
-    <div class="loader is-hidden">Loading...</div>
+    <button type="button" class="load-more-btn is-hidden">Load more</button>
+
+   
+    <span class="loader is-hidden"></span>
 
     <script type="module" src="./main.js"></script>
   </body>
