--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="section">
-      <form class="search-form" id="search-form">
+      <form class="form" id="search-form">
         <input
           class="search-input"
           type="text"
@@ -25,7 +25,6 @@
 
     <button type="button" class="load-more-btn is-hidden">Load more</button>
 
-   
     <span class="loader is-hidden"></span>
 
     <script type="module" src="./main.js"></script>
